android/v1.8.0/DARK_AND_LIGHT_MODE_README.md
# Light and Dark Mode Support

This document provides the information about *_**Light and Dark mode support**_* for both default and custom configurations.

## Default Light and Dark Mode Support

Below are the implementation details for the *_**default Light and Dark mode**_* support for UI components implemented in UX SDK.

### 1. Classic Outfit Widget

No default dark mode support is added to the Classic Outfit Widget. In dark mode, the Outfit widget will be displayed with the same configurations as shown below.

**Screenshots :**

![Image1](Screenshots/default_light_and_dark_mode_support_for_classic_outfit_widget.png)

### 2. Hotspot Outfit Widget

No default dark mode support is added to the Hotspot Outfit Widget. In dark mode, the Outfit widget will be displayed with the same configurations as shown below. 

![Image1](Screenshots/default_light_and_dark_mode_support_for_hotspot_outfit_widget.png)

### 3. Grid Outfit Widget

No default dark mode support is added to the Grid Outfit Widget. In dark mode, the Outfit widget will be displayed with the same configurations as shown below.

![Image1](Screenshots/default_light_and_dark_mode_support_for_grid_outfit_widget.png)

### 4. Dynamic Gallery Widget

No default dark mode support is added to the Dynamic Gallery Widget. In dark mode, the Dynamic Gallery widget will be displayed with the same configurations as shown below.

![Image1](Screenshots/default_light_and_dark_mode_support_for_dynamic_gallery_widget.png)

### 5. Shop the Set

No default dark mode support is added to the Shop the Set Widget. In dark mode, the Shop the Set widget will be displayed with the same configurations.

![Image1](Screenshots/default_light_and_dark_mode_support_for_shop_the_set_widget.png)


### 6. Styled For You Widget

No default dark mode support is added to the Styled For You Widget. In dark mode, the Styled For You widget will be displayed with the same configurations as shown below.

![Image1](Screenshots/default_light_and_dark_mode_support_for_styled_for_you_widget.png)

### 7. Outfit Landing Page(OLP) Widget

No default dark mode support is added to the OLP Widget. In dark mode, the OLP widget will be displayed with the same configurations as shown below.

![Image1](Screenshots/default_light_and_dark_mode_support_for_olp_widget.png)

### 8. Trending Bundles Widget

No default dark mode support is added to the Trending Bundles Widget. In dark mode, the Trending Bundles widget will be displayed with the same configurations as shown below.

![Image1](Screenshots/default_light_and_dark_mode_support_for_trending_bundles_widget.png)

### 9. UpsellItems Widget

No default dark mode support is added to the UpsellItems Widget. In dark mode, the UpsellItems widget will be displayed with the same configurations as shown below.

![Image1](Screenshots/default_light_and_dark_mode_support_for_upsell_items_widget.png)

### 10. Styled For You Full Page Widget

No default dark mode support is added to the Styled For You Full Page Widget. In dark mode, this widget will be displayed with the same configurations as shown below.

![Image1](Screenshots/default_light_and_dark_mode_support_for_styled_for_you_full_page_widget.png)

### 11. Variant Widget

No default dark mode support is added to the Variant Widget. In dark mode, this widget will be displayed with the same configurations as shown below.

![Image1](Screenshots/default_light_and_dark_mode_support_for_variant_widget.png)


### 12. Standard Product List

Below screenshot shows the Product List screen in default Light and Dark mode.

**Screenshots :**

</br>![Image1](Screenshots/default_light_and_dark_mode_support_for_standard_product_list_screen.png)

### 13. Mix and Match Screen

Below screenshot shows the Mix and Match Screen in default Light and Dark mode.

**Screenshots :**

</br>![Image1](Screenshots/default_light_and_dark_mode_support_for_mix_and_match_widget.png)


### 14. OutfitBundle Product List

No default dark mode support is added to the Dynamic Gallery Product List. In dark mode, the Dynamic Gallery Product List will be displayed with the same configurations as shown below.

**Screenshots :**

</br>![Image1](Screenshots/default_light_and_dark_mode_support_for_dynamic_gallery_product_list_screen.png)


## Custom Light and Dark Mode Support

The default Light and Dark mode colors can be customised by adding colors to the *_**color.xml resource file**_*. Use *_**color.xml from values folder**_* to define Light mode colors and *_**color.xml from values-night folder**_* to define Dark mode colors. Below is the screenshot for the reference.<br /><br />

![Image3](Screenshots/colors_resource_file_location.png)

**_**Note**_* : <br />1. If you define a color in Light mode color.xml file(values folder) and *_**not in Dark mode color.xml(values-night folder)**_*, the same color will be used in Dark mode too. <br />2. If you define a color in Dark mode color.xml file(values-night folder) and *_**not in Light mode color.xml(values folder)**_*, this will give the syntax error. So the colors should be defined in both the color.xml files*

Below are the implementation details to customise the Light and Dark mode support from Sample Integrator App.

### 1. Classic Outfit Widget

Below screenshot shows the Classic Outfit Widget in custom Light and Dark mode.

**Screenshots :**

![Image4](Screenshots/custom_light_and_dark_mode_support_for_classic_outfit_widget.png)

### 2. Hotspot Outfit Widget

Below screenshot shows the Hotspot Outfit Widget in custom Light and Dark mode.

**Screenshots :**

![Image4](Screenshots/custom_light_and_dark_mode_support_for_hotspot_outfit_widget.png)

### 3. Grid Outfit Widget

Below screenshot shows the Grid Outfit Widget in custom Light and Dark mode.

**Screenshots :**

![Image4](Screenshots/custom_light_and_dark_mode_support_for_grid_outfit_widget.png)

### 4. Dynamic Gallery Widget

Below screenshot shows the Dynamic Gallery Widget in custom Light and Dark mode.

**Screenshots :** 

![Image4](Screenshots/custom_light_and_dark_mode_support_for_dynamic_gallery_widget.png)

### 5. Shop the Set

Below screenshot shows the Shop the Set Widget in custom Light and Dark mode.

**Screenshots :**

![Image4](Screenshots/custom_light_and_dark_mode_support_for_shop_the_set_widget.png)

### 6. Styled For You Widget

Below screenshot shows the Styled For You Widget in custom Light and Dark mode.

**Screenshots :**

![Image4](Screenshots/custom_light_and_dark_mode_support_for_styled_for_you_widget.png)

### 7. Outfit Landing Page(OLP) Widget

Below screenshot shows the OLP Widget in custom Light and Dark mode.

**Screenshots :**

![Image4](Screenshots/custom_light_and_dark_mode_support_for_olp_widget.png)

### 8. Trending Bundles Widget

Below screenshot shows the Trending Bundles Widget in custom Light and Dark mode.

**Screenshots :**

![Image4](Screenshots/custom_light_and_dark_mode_support_for_trending_bundles_widget.png)

### 9. Upsell Items Widget

Below screenshot shows the Upsell Items Widget in custom Light and Dark mode.

**Screenshots :**

![Image4](Screenshots/custom_light_and_dark_mode_support_for_upsell_items_widget.png)


### 10. Styled For You Full Page Widget

Below screenshot shows the Styled For You Full Page Widget in custom Light and Dark mode.

**Screenshots :**

![Image4](Screenshots/custom_light_and_dark_mode_support_for_styled_for_you_full_page_widget.png)

### 11. Variant Widget

Below screenshot shows the Variant Widget in custom Light and Dark mode.

**Screenshots :**

</br>![Image1](Screenshots/custom_light_and_dark_mode_support_for_variant_widget.png)


### 12. Standard Product List

Below screenshot shows the Standard Product List screen in custom Light and Dark mode.

**Screenshots :** 

</br>![Image1](Screenshots/custom_light_and_dark_mode_support_for_standard_product_list.png)

### 13. Mix and Match Screen

Below screenshot shows the Mix and Match Screen in custom Light and Dark mode.

**Screenshots :**

</br>![Image1](Screenshots/custom_light_and_dark_mode_support_for_mix_and_match_widget.png)


### 14. OutfitBundle Product List

Below screenshot shows the Dynamic Gallery Product List screen in custom Light and Dark mode.

**Screenshots :**

</br>![Image1](Screenshots/custom_light_and_dark_mode_support_for_dynamic_gallery_product_list_screen.png)


**Code example to customize the Dark And Light Mode colors**

```kotlin

val outfitsRecyclerView = findViewById<StyliticsUIApi>(R.id.outfitsRecyclerView)

private fun customizeDarkAndLightModeConfiguration(outfits: Outfits) {
    val topLabelConfig = TopLabel(
        label3 = TopLabel.Label3(
            fontColor = R.color.classic_top_label_font_color,
            background = R.drawable.top_label_border
        )
    )
    outfitsRecyclerView?.load(
        outfits, OutfitsTemplate.Classic(
            //Custom color configuration for Classic Outfit Widget components
            classicConfig = ClassicConfig(
                widget = ClassicConfig.Widget(
                    backgroundColor = R.color.classic_widget_background_color
                ),
                topLabel = topLabelConfig,
                bottomLabel = ClassicConfig.BottomLabel(
                    fontColor = R.color.classic_bottom_label_font_color,
                    backgroundColor = R.color.classic_bottom_label_background_color
                ),
                bullet = ClassicConfig.Bullet(
                    unselectedColor = R.color.classic_unselected_bullet_color,
                    selectedColor = R.color.classic_selected_bullet_color
                )
            )
        ),
        productListScreenTemplate = ProductListScreenTemplate.Standard(
            productListScreenConfig = ProductListScreenConfig(
                //Custom color configuration for Product List screen title
                itemListHeader = ProductListScreenConfig.ItemListHeader(
                    fontColor = R.color.standard_product_list_screen_title_font_color,
                ),
                //Custom color configuration for Product List view components
                productListConfig = ProductListConfig(
                    itemName = ProductListConfig.ItemName(
                        fontColor = R.color.standard_product_list_item_name_font_color
                    ),
                    itemPrice = ProductListConfig.ItemPrice(
                        priceFontColor = R.color.standard_product_list_item_price_font_color,
                        salePriceFontColor = R.color.standard_product_list_item_sale_price_font_color,
                        strikeThroughPriceFontColor = R.color.standard_product_list_item_strike_through_price_font_color
                    ),
                    backgroundColor = R.color.standard_product_list_item_background_color,
                    swapButton = ProductListConfig.SwapButton(
                        backgroundColor = R.drawable.standard_product_list_swap_button_background,
                        fontColor = R.color.standard_product_list_swap_button_fontColor
                    )
                )
            ),
            
            //Custom color configuration for Mix and Match Screen components
            replacementScreenConfig = ReplacementScreenConfig(
                backgroundColor = R.color.custom_replacement_screen_background,
                header = ReplacementScreenConfig.Header(
                    fontColor = R.color.custom_replacement_screen_title_font_color
                ),
                config = ReplacementItemConfig(
                    item = ReplacementItemConfig.Item(
                        fontColor = R.color.custom_replacement_item_name_fonr_color,
                        priceFontColor = R.color.custom_replacement_item_price_font_color,
                        salePriceFontColor = R.color.custom_replacement_item_sale_price_fonr_color,
                        strikeThroughPriceFontColor = R.color.custom_replacement_strike_trough_price_color
                    )
                )
            )
        )
    )
}
```

Use `color.xml` (from values folder) for Light Mode and `color.xml` (from values-night folder) for Dark Mode in Sample Integrator App.

## In-App Dark Mode Support

### Settings screen

In this screen, user can enable/disable the dark mode manually from application.

Below is the reference code to programmatically change light/dark mode.

```kotlin
override fun onCheckedChanged(view: CompoundButton?, isChecked: Boolean) {
  when (view?.id) {
    R.id.switchCompat -> {
      if (isChecked) {
        AppCompatDelegate.setDefaultNightMode(AppCompatDelegate.MODE_NIGHT_YES)
      } else {
        AppCompatDelegate.setDefaultNightMode(AppCompatDelegate.MODE_NIGHT_NO)
      }
    }
  }
}
```

### Disable Dark Mode

Use the below line of code to disable Dark mode in Integrator app and SDK.

```kotlin
AppCompatDelegate.setDefaultNightMode(AppCompatDelegate.MODE_NIGHT_NO)
```

## License

Copyright © 2023 Stylitics
